compiler/testData/diagnostics/tests/scopes/visibility2.jet
//FILE:a.kt
package a

private open class A {
    fun bar() {}
}

private fun foo() {}

fun makeA() = A()

private object PO {}

//FILE:b.kt
//+JDK
package a.b

import a.*

fun test() {
    val y = makeA()
    y.<!UNRESOLVED_REFERENCE!>bar<!>()
    <!UNRESOLVED_REFERENCE!>foo<!>()

    val <!UNUSED_VARIABLE!>u<!> : <!INVISIBLE_MEMBER!>A<!> = <!UNRESOLVED_REFERENCE!>A<!>()
    val <!UNUSED_VARIABLE!>a<!> : java.util.Arrays.<!INVISIBLE_MEMBER!>ArrayList<!><Int>;

    val <!UNUSED_VARIABLE!>po<!> = <!UNRESOLVED_REFERENCE!>PO<!>()
}

class B : <!INVISIBLE_MEMBER!>A<!>() {}

class Q {
    class W {
        fun foo() {
            val <!UNUSED_VARIABLE!>y<!> = makeA() //assure that 'makeA' is visible
        }
    }
}

//check that 'toString' can be invoked without specifying return type
class NewClass : java.util.ArrayList<Integer>() {
    public override fun toString() = "a"
}
